python/testData/inspections/addFunctionToModuleInFromImport/addFunctionToModuleInFromImport.py
from mod import <error descr="Cannot find reference 'foo' in 'mod'"><caret>foo</error>


foo()
